--- a/0-homepage.html
+++ b/0-homepage.html
@@ -1,11 +1,314 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html>
+  <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Coiny&display=swap" rel="stylesheet">
+    <title>Smile School - Holberton</title>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body class="text-center">
+
+    <main>
+      <!-- HEADER -->
+      <div class="top-image white-text">
+        <header>
+          <div>
+            <div>
+              <a href="logo-link"><img src="images/logo.png" alt="img missing"></a>
+            </div>
+            <div>
+              <a href="link-1">COURSES</a>
+              <a href="link-2">PRICING</a>
+              <a href="link-3">LOGIN</a>
+            </div>
+          </div>
+        </header>
+
+        <!-- BANNER -->
+        <section>
+          <div>
+            <h1>Get Schooled</h1>
+            <p><strong><span>SMILES</span><span>GRIN</span><span>LAUGH</span></strong></p>
+            <button class="btn purple-bg white-text"><strong>REGISTER FOR FREE</strong></button>
+          </div>
+          <div>
+            <h2><strong>Learn</strong> from the pros</h2>
+            <div>
+              <img src="images/profile_1.jpg" alt="Phillip Massey">
+              <h3>Phillip Massey</h3>
+              <p>"smile of the year"</p>
+              <p>2018-2019</p>
+            </div>
+            <div>
+              <img src="images/profile_2.jpg" alt="Nannie Lawrence">
+              <h3>Nannie Lawrence</h3>
+              <p>Best "little smile"</p>
+              <p>2017</p>
+            </div>
+            <div>
+              <img src="images/profile_3.jpg" alt="Bruce Walters">
+              <h3>Bruce Walters</h3>
+              <p>Best "friend smile"</p>
+              <p>live perfomance 2019</p>
+            </div>
+            <div>
+              <img src="images/profile_4.jpg" alt="Henry Hughes">
+              <h3>Henry Hughes</h3>
+              <p>"24h smiles" winner</p>
+              <p>2016-2019</p>
+            </div>
+          </div>
+        </section>
+      </div>
+
+      <!-- QUOTE -->
+      <section class="purple-bg">
+        <img src="images/profile_5.jpg" alt="quote photo">
+        <div>
+          <p>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</p>
+          <p><strong>Person Name</strong></p>
+          <p><em>weather presenter</em></p>
+        </div>
+      </section>
+
+      <!-- POPULAR VIDEOS -->
+      <section>
+        <h1>Most <strong>popular</strong> tutorials</h1>
+        <div>
+          <div>
+            <img src="images/thumbnail_4.jpg" alt="Diagonal Smile">
+            <img src="images/play.png" alt="">
+            <div>
+              <h2>Diagonal Smile</h2>
+              <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+              <div>
+                <img src="images/profile_1.jpg" alt="Phillip Massey">
+                <h3>Phillip Massey</h3>
+              </div>
+              <div>
+                <div>
+                  <img src="images/star_on.png" alt="*">
+                  <img src="images/star_on.png" alt="*">
+                  <img src="images/star_on.png" alt="*">
+                  <img src="images/star_on.png" alt="*">
+                  <img src="images/star_off.png" alt="*">
+                </div>
+                <p>8 min</p>
+              </div>
+            </div>
+          </div>
+          <div>
+            <img src="images/thumbnail_3.jpg" alt="Sad Smile">
+            <img src="images/play.png" alt="">
+            <div>
+              <h2>Sad Smile</h2>
+              <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+              <div>
+                <img src="images/profile_1.jpg" alt="Phillip Massey">
+                <h3>Phillip Massey</h3>
+              </div>
+              <div>
+                <div>
+                  <img src="images/star_on.png" alt="*">
+                  <img src="images/star_on.png" alt="*">
+                  <img src="images/star_on.png" alt="*">
+                  <img src="images/star_on.png" alt="*">
+                  <img src="images/star_off.png" alt="*">
+                </div>
+                <p>8 min</p>
+              </div>
+            </div>
+          </div>
+            <div>
+              <img src="images/thumbnail_1.jpg" alt="Natural Smile">
+              <img src="images/play.png" alt="">
+              <div>
+                <h2>Natural Smile</h2>
+                <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                <div>
+                  <img src="images/profile_1.jpg" alt="Phillip Massey">
+                  <h3>Phillip Massey</h3>
+                </div>
+                <div>
+                  <div>
+                    <img src="images/star_on.png" alt="*">
+                    <img src="images/star_on.png" alt="*">
+                    <img src="images/star_on.png" alt="*">
+                    <img src="images/star_on.png" alt="*">
+                    <img src="images/star_off.png" alt="*">
+                  </div>
+                  <p>8 min</p>
+                </div>
+              </div>
+            </div>
+            <div>
+              <img src="images/thumbnail_2.jpg" alt="Happy Smile">
+              <img src="images/play.png" alt="">
+              <div>
+                <h2>Happy Smile</h2>
+                <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                <div>
+                  <img src="images/profile_1.jpg" alt="Phillip Massey">
+                  <h3>Phillip Massey</h3>
+                </div>
+                <div>
+                  <div>
+                    <img src="images/star_on.png" alt="*">
+                    <img src="images/star_on.png" alt="*">
+                    <img src="images/star_on.png" alt="*">
+                    <img src="images/star_on.png" alt="*">
+                    <img src="images/star_off.png" alt="*">
+                  </div>
+                  <p>8 min</p>
+                </div>
+              </div>
+            </div>
+        </div>
+      </section>
+
+      <!-- MEMBERSHIP -->
+      <section class="navy-bg white-text">
+        <h1><strong class="purple-text">Free</strong> membership</h1>
+        <div>
+          <div>
+            <img src="images/smile_on.png" alt=":)">
+            <h2>Lorem ipsum</h2>
+            <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+          </div>
+          <div>
+            <img src="images/smile_on.png" alt=":)">
+            <h2>Lorem ipsum</h2>
+            <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+          </div>
+          <div>
+            <img src="images/smile_on.png" alt=":)">
+            <h2>Lorem ipsum</h2>
+            <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+          </div>
+          <div>
+            <img src="images/smile_on.png" alt=":)">
+            <h2>Lorem ipsum</h2>
+            <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+          </div>
+        </div>
+        <button><strong>REGISTER FOR FREE</strong></button>
+      </section>
+
+      <!-- LATEST VIDEOS -->
+      <section>
+        <h1>Most <strong>popular</strong> tutorials</h1>
+        <div>
+          <div>
+            <img src="images/Inverted.png" alt="Backwards Smile">
+            <img src="images/play.png" alt="">
+            <div>
+              <h2>Diagonal Smile</h2>
+              <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+              <div>
+                <img src="images/profile_1.jpg" alt="Phillip Massey">
+                <h3>Phillip Massey</h3>
+              </div>
+              <div>
+                <div>
+                  <img src="images/star_on.png" alt="*">
+                  <img src="images/star_on.png" alt="*">
+                  <img src="images/star_on.png" alt="*">
+                  <img src="images/star_on.png" alt="*">
+                  <img src="images/star_off.png" alt="*">
+                </div>
+                <p>8 min</p>
+              </div>
+            </div>
+          </div>
+          <div>
+            <img src="images/thumbnail_3.jpg" alt="Sad Smile">
+            <img src="images/play.png" alt="">
+            <div>
+              <h2>Sad Smile</h2>
+              <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+              <div>
+                <img src="images/profile_1.jpg" alt="Phillip Massey">
+                <h3>Phillip Massey</h3>
+              </div>
+              <div>
+                <div>
+                  <img src="images/star_on.png" alt="*">
+                  <img src="images/star_on.png" alt="*">
+                  <img src="images/star_on.png" alt="*">
+                  <img src="images/star_on.png" alt="*">
+                  <img src="images/star_off.png" alt="*">
+                </div>
+                <p>8 min</p>
+              </div>
+            </div>
+          </div>
+            <div>
+              <img src="images/thumbnail_1.jpg" alt="Natural Smile">
+              <img src="images/play.png" alt="">
+              <div>
+                <h2>Natural Smile</h2>
+                <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                <div>
+                  <img src="images/profile_1.jpg" alt="Phillip Massey">
+                  <h3>Phillip Massey</h3>
+                </div>
+                <div>
+                  <div>
+                    <img src="images/star_on.png" alt="*">
+                    <img src="images/star_on.png" alt="*">
+                    <img src="images/star_on.png" alt="*">
+                    <img src="images/star_on.png" alt="*">
+                    <img src="images/star_off.png" alt="*">
+                  </div>
+                  <p>8 min</p>
+                </div>
+              </div>
+            </div>
+            <div>
+              <img src="images/thumbnail_2.jpg" alt="Happy Smile">
+              <img src="images/play.png" alt="">
+              <div>
+                <h2>Happy Smile</h2>
+                <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                <div>
+                  <img src="images/profile_1.jpg" alt="Phillip Massey">
+                  <h3>Phillip Massey</h3>
+                </div>
+                <div>
+                  <div>
+                    <img src="images/star_on.png" alt="*">
+                    <img src="images/star_on.png" alt="*">
+                    <img src="images/star_on.png" alt="*">
+                    <img src="images/star_on.png" alt="*">
+                    <img src="images/star_off.png" alt="*">
+                  </div>
+                  <p>8 min</p>
+                </div>
+              </div>
+            </div>
+        </div>
+      </section>
+    </main>
+
+    <!-- FOOTER -->
+    <footer class="navy-bg white-text">
+      <div>
+        <div>
+          <img src="images/logo.png" alt="Smile school">
+        </div>
+        <div>
+          <a href=""><img src="images/facebook.png" alt="FaceBook"></a>
+          <a href=""><img src="images/twitter.png" alt="Twitter"></a>
+          <a href=""><img src="images/instagram.png" alt="Instagram"></a>
+        </div>
+      </div>
+      <p class="opacity-text">smileschool 2020</p>
+    </footer>
+  </body>
 </html>
