--- a/1-homepage.html
+++ b/1-homepage.html
@@ -141,11 +141,11 @@
                         </div>
                     </div>
                     <a class="carousel-control-prev mb-5 mb-sm-0" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                        <span class="icon leftArrow mb-5 mb-sm-0" aria-hidden="true"></span>
+                        <span class="carousel-control-prev-icon mb-5 mb-sm-0" aria-hidden="true"></span>
                         <span class="sr-only">Previous</span>
                     </a>
                     <a class="carousel-control-next mb-5 mb-sm-0" href="#carouselExampleIndicators" role="button" data-slide="next">
-                        <span class="icon rightArrow mb-5 mb-sm-0" aria-hidden="true"></span>
+                        <span class="carousel-control-next-icon mb-5 mb-sm-0" aria-hidden="true"></span>
                         <span class="sr-only">Next</span>
                     </a>
                 </div>
