--- a/2-homepage.html
+++ b/2-homepage.html
@@ -162,11 +162,11 @@
                         </h2>
                         <div class="carousel-item active">
                             <div class="row">
-                                <div class="col">
-                                    <img src="images/thumbnail_1.jpg" width="255" height="154">
+                                <div class="col px-1">
+                                    <img src="images/thumbnail_4.jpg" width="255" height="154">
                                     <h5 class="align-self-start font-weight-bolder pt-3 pl-6 pl-6-left">Diagonal Smile
                                     </h5>
-                                    <p class="text-gray align-self-start pt-1 pl-6 pl-6-left">You really think I am going to use real words here? Nah.</p>
+                                    <p class="text-gray align-self-start pt-1 pl-6 pl-6-left">Lorem ipsum dolor sit amet, consect<br>adipiscing elit, sed do eiusmod.</p>
                                     <div class="align-self-start pt-1 pl-6 pl-6-left d-flex">
                                         <img class="rounded-circle float-left" src="images/profile_1.jpg" width="30" height="30">
                                         <p class="purple float-right pl-3 mb-0 mt-1">Phillip Massey</p>
@@ -181,10 +181,10 @@
                                     </div>
                                 </div>
                                 <div class="col px-1">
-                                    <img src="images/thumbnail_2.jpg" width="255" height="154">
+                                    <img src="images/thumbnail_3.jpg" width="255" height="154">
                                     <h5 class="align-self-start font-weight-bolder pt-3 pl-6">Sad Smile
                                     </h5>
-                                    <p class="text-gray align-self-start pt-1 pl-6">You really think I am going to use real words here? Nah.</p>
+                                    <p class="text-gray align-self-start pt-1 pl-6">Lorem ipsum dolor sit amet, consect<br>adipiscing elit, sed do eiusmod.</p>
                                     <div class="align-self-start pt-1 pl-6 d-flex">
                                         <img class="rounded-circle float-left" src="images/profile_1.jpg" width="30" height="30">
                                         <p class="purple float-right pl-3 mb-0 mt-1">Phillip Massey</p>
@@ -199,10 +199,10 @@
                                     </div>
                                 </div>
                                 <div class="col px-1">
-                                    <img src="images/thumbnail_3.jpg" width="255" height="154">
+                                    <img src="images/thumbnail_1.jpg" width="255" height="154">
                                     <h5 class="align-self-start font-weight-bolder pt-3 pl-6">Neutral Smile
                                     </h5>
-                                    <p class="text-gray align-self-start pt-1 pl-6">You really think I am going to use real words here? Nah.</p>
+                                    <p class="text-gray align-self-start pt-1 pl-6">Lorem ipsum dolor sit amet, consect<br>adipiscing elit, sed do eiusmod.</p>
                                     <div class="align-self-start pt-1 pl-6 d-flex">
                                         <img class="rounded-circle float-left" src="images/profile_1.jpg" width="30 " height="30 ">
                                         <p class="purple float-right pl-3 mb-0 mt-1">Phillip Massey</p>
@@ -217,10 +217,10 @@
                                     </div>
                                 </div>
                                 <div class="col px-1">
-                                    <img src="images/thumbnail_4.jpg" width="255" height="154">
+                                    <img src="images/thumbnail_2.jpg" width="255" height="154">
                                     <h5 class="align-self-start font-weight-bolder pt-3 pl-6">Happy Smile
                                     </h5>
-                                    <p class="text-gray align-self-start pt-1 pl-6">You really think I am going to use real words here? Nah.</p>
+                                    <p class="text-gray align-self-start pt-1 pl-6">Lorem ipsum dolor sit amet, consect<br>adipiscing elit, sed do eiusmod.</p>
                                     <div class="align-self-start pt-1 pl-6 d-flex">
                                         <img class="rounded-circle float-left" src="images/profile_1.jpg" width="30 " height="30 ">
                                         <p class="purple float-right pl-3 mb-0 mt-1">Phillip Massey</p>
@@ -249,6 +249,41 @@
             </div>
         </section>
 
+        <!-- MEMBERSHIP -->
+        <section class="dark-bg container-fluid">
+            <h1 class="text-center font-weight-light py-5"><span class="font-weight-bold purple">Free </span> membership
+            </h1>
+            <div class="container-lg">
+                <div class="container-lg">
+                    <div class="row">
+                        <div class="col-12 col-md-6 col-lg-3 text-center p-4">
+                            <img src="images/smile_on.png" height="35px" width="45px" alt="">
+                            <h1 class="lead font-weight-bold py-3">Lorem ipsum</h1>
+                            <p>Lorem ipsum dolor sit amet,<br>consectetur adipiscing elit.</p>
+                        </div>
+                        <div class="col-12 col-md-6 col-lg-3 text-center p-4">
+                            <img src="images/smile_on.png" height="35px" width="45px" alt="">
+                            <h1 class="lead font-weight-bold py-3">Lorem ipsum</h1>
+                            <p>Lorem ipsum dolor sit amet,<br>consectetur adipiscing elit.</p>
+                        </div>
+                        <div class="col-12 col-md-6 col-lg-3 text-center p-4">
+                            <img src="images/smile_on.png" height="35px" width="45px" alt="">
+                            <h1 class="lead font-weight-bold py-3">Lorem ipsum</h1>
+                            <p>Lorem ipsum dolor sit amet,<br>consectetur adipiscing elit.</p>
+                        </div>
+                        <div class="col-12 col-md-6 col-lg-3 text-center p-4">
+                            <img src="images/smile_on.png" height="35px" width="45px" alt="">
+                            <h1 class="lead font-weight-bold py-3">Lorem ipsum</h1>
+                            <p>Lorem ipsum dolor sit amet,<br>consectetur adipiscing elit.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="d-flex justify-content-center pb-5">
+                    <button class="btn btn-secondary rounded-pill text-center text-uppercase font-weight-bold px-4 py-2 m-3" href="#" aria-label="Register">Register for Free</button>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
