Task 5 - Latest Videos

--- a/4-homepage.html
+++ b/4-homepage.html
@@ -283,6 +283,18 @@
                 </div>
             </div>
         </section>
+
+        <!-- POPULAR VIDEOS -->
+        <section class="container-fluid text-dark white-bg py-5 mb-5 d-none d-sm-block">
+            <div class="container-lg quotes">
+                <div id="videoCarousel3" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner">
+                        <h2 class="font-weight-light px-1 text-center pt-5 pb-5"><span class="font-weight-bold purple">Latest</span> videos
+                        </h2>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
