--- a/4-homepage.html
+++ b/4-homepage.html
@@ -172,12 +172,12 @@
                                         <p class="purple float-right pl-3 mb-0 mt-1">Phillip Massey</p>
                                     </div>
                                     <div class="align-self-start pt-3 pl-6 pl-6-left pr-0 d-flex">
-                                        <span class="fa fa-star checked purple pt-1"></span>
-                                        <span class="fa fa-star checked purple pl-2 pt-1"></span>
-                                        <span class="fa fa-star checked purple pl-2 pt-1"></span>
-                                        <span class="fa fa-star checked purple pl-2 pt-1"></span>
-                                        <span style="color: lightgrey;" class="fa fa-star pl-2 pt-1"></span>
-                                        <p class="purple float-right mins">8mins</p>
+                                        <img src="images/star_on.png" height="15px" width="15px">
+                                        <img src="images/star_on.png" height="15px" width="15px">
+                                        <img src="images/star_on.png" height="15px" width="15px">
+                                        <img src="images/star_on.png" height="15px" width="15px">
+                                        <img src="images/star_off.png" height="15px" width="15px">
+                                        <h6 class="purple float-right mins">8min</h6>
                                     </div>
                                 </div>
                                 <div class="col px-1">
@@ -189,13 +189,13 @@
                                         <img class="rounded-circle float-left" src="images/profile_1.jpg" width="30" height="30">
                                         <p class="purple float-right pl-3 mb-0 mt-1">Phillip Massey</p>
                                     </div>
-                                    <div class="align-self-start pt-3 pl-6 pr-0 d-flex">
-                                        <span class="fa fa-star checked purple pt-1"></span>
-                                        <span class="fa fa-star checked purple pl-2 pt-1"></span>
-                                        <span class="fa fa-star checked purple pl-2 pt-1"></span>
-                                        <span class="fa fa-star checked purple pl-2 pt-1"></span>
-                                        <span style="color: lightgrey;" class="fa fa-star pl-2 pt-1"></span>
-                                        <p class="purple float-right mins">8mins</p>
+                                    <div class="align-self-start pt-3 pl-6 pl-6-left pr-0 d-flex">
+                                        <img src="images/star_on.png" height="15px" width="15px">
+                                        <img src="images/star_on.png" height="15px" width="15px">
+                                        <img src="images/star_on.png" height="15px" width="15px">
+                                        <img src="images/star_on.png" height="15px" width="15px">
+                                        <img src="images/star_off.png" height="15px" width="15px">
+                                        <h6 class="purple float-right mins">8min</h6>
                                     </div>
                                 </div>
                                 <div class="col px-1">
@@ -207,13 +207,13 @@
                                         <img class="rounded-circle float-left" src="images/profile_1.jpg" width="30 " height="30 ">
                                         <p class="purple float-right pl-3 mb-0 mt-1">Phillip Massey</p>
                                     </div>
-                                    <div class="align-self-start pt-3 pl-6 pr-0 d-flex">
-                                        <span class="fa fa-star checked purple pt-1"></span>
-                                        <span class="fa fa-star checked purple pl-2 pt-1"></span>
-                                        <span class="fa fa-star checked purple pl-2 pt-1"></span>
-                                        <span class="fa fa-star checked purple pl-2 pt-1"></span>
-                                        <span style="color: lightgrey;" class="fa fa-star pl-2 pt-1"></span>
-                                        <p class="purple float-right mins">8mins</p>
+                                    <div class="align-self-start pt-3 pl-6 pl-6-left pr-0 d-flex">
+                                        <img src="images/star_on.png" height="15px" width="15px">
+                                        <img src="images/star_on.png" height="15px" width="15px">
+                                        <img src="images/star_on.png" height="15px" width="15px">
+                                        <img src="images/star_on.png" height="15px" width="15px">
+                                        <img src="images/star_off.png" height="15px" width="15px">
+                                        <h6 class="purple float-right mins">8min</h6>
                                     </div>
                                 </div>
                                 <div class="col px-1">
@@ -225,13 +225,13 @@
                                         <img class="rounded-circle float-left" src="images/profile_1.jpg" width="30 " height="30 ">
                                         <p class="purple float-right pl-3 mb-0 mt-1">Phillip Massey</p>
                                     </div>
-                                    <div class="align-self-start pt-3 pl-6 pr-0 d-flex">
-                                        <span class="fa fa-star checked purple pt-1"></span>
-                                        <span class="fa fa-star checked purple pl-2 pt-1"></span>
-                                        <span class="fa fa-star checked purple pl-2 pt-1"></span>
-                                        <span class="fa fa-star checked purple pl-2 pt-1"></span>
-                                        <span style="color: lightgrey;" class="fa fa-star pl-2 pt-1"></span>
-                                        <p class="purple float-right mins">8mins</p>
+                                    <div class="align-self-start pt-3 pl-6 pl-6-left pr-0 d-flex">
+                                        <img src="images/star_on.png" height="15px" width="15px">
+                                        <img src="images/star_on.png" height="15px" width="15px">
+                                        <img src="images/star_on.png" height="15px" width="15px">
+                                        <img src="images/star_on.png" height="15px" width="15px">
+                                        <img src="images/star_off.png" height="15px" width="15px">
+                                        <h6 class="purple float-right mins">8min</h6>
                                     </div>
                                 </div>
                             </div>
@@ -291,7 +291,87 @@
                     <div class="carousel-inner">
                         <h2 class="font-weight-light px-1 text-center pt-5 pb-5"><span class="font-weight-bold purple">Latest</span> videos
                         </h2>
+                        <div class="carousel-item active">
+                            <div class="row">
+                                <div class="col px-1">
+                                    <img src="images/Inverted.png" width="255" height="154">
+                                    <h5 class="align-items-start font-weight-bolder pt-3 pl-6 pl-6-left">Inverted Smile</h5>
+                                    <p class="text-gray align-self-start pt-1 pl-6 pl-6-left">Lorem ipsum dolor sit amet, consect<br>adipiscing elit, sed do eiusmod.</p>
+                                    <div class="align-self-start pt-1 pl-6 pl-6-left d-flex">
+                                        <img class="rounded-circle float-left" src="images/profile_1.jpg" width="30" height="30">
+                                        <p class="purple float-right pl-3 mb-0 mt-1 ">Phillip Massey</p>
+                                    </div>
+                                    <div class="align-self-start pt-3 pl-6 pl-6-left pr-0 d-flex">
+                                        <img src="images/star_on.png" height="15px" width="15px">
+                                        <img src="images/star_on.png" height="15px" width="15px">
+                                        <img src="images/star_on.png" height="15px" width="15px">
+                                        <img src="images/star_on.png" height="15px" width="15px">
+                                        <img src="images/star_off.png" height="15px" width="15px">
+                                        <h6 class="purple float-right mins">8min</h6>
+                                    </div>
+                                </div>
+                                <div class="col px-1">
+                                    <img src="images/thumbnail_3.jpg" width="255" height="154">
+                                    <h5 class="align-items-start font-weight-bolder pt-3 pl-6 pl-6-left">Sad Smile</h5>
+                                    <p class="text-gray align-self-start pt-1 pl-6 pl-6-left">Lorem ipsum dolor sit amet, consect<br>adipiscing elit, sed do eiusmod.</p>
+                                    <div class="align-self-start pt-1 pl-6 pl-6-left d-flex">
+                                        <img class="rounded-circle float-left" src="images/profile_1.jpg" width="30" height="30">
+                                        <p class="purple float-right pl-3 mb-0 mt-1 ">Phillip Massey</p>
+                                    </div>
+                                    <div class="align-self-start pt-3 pl-6 pl-6-left pr-0 d-flex">
+                                        <img src="images/star_on.png" height="15px" width="15px">
+                                        <img src="images/star_on.png" height="15px" width="15px">
+                                        <img src="images/star_on.png" height="15px" width="15px">
+                                        <img src="images/star_on.png" height="15px" width="15px">
+                                        <img src="images/star_off.png" height="15px" width="15px">
+                                        <h6 class="purple float-right mins">8min</h6>
+                                    </div>
+                                </div>
+                                <div class="col px-1">
+                                    <img src="images/thumbnail_1.jpg" width="255" height="154">
+                                    <h5 class="align-items-start font-weight-bolder pt-3 pl-6 pl-6-left">Natural Smile</h5>
+                                    <p class="text-gray align-self-start pt-1 pl-6 pl-6-left">Lorem ipsum dolor sit amet, consect<br>adipiscing elit, sed do eiusmod.</p>
+                                    <div class="align-self-start pt-1 pl-6 pl-6-left d-flex">
+                                        <img class="rounded-circle float-left" src="images/profile_1.jpg" width="30" height="30">
+                                        <p class="purple float-right pl-3 mb-0 mt-1 ">Phillip Massey</p>
+                                    </div>
+                                    <div class="align-self-start pt-3 pl-6 pl-6-left pr-0 d-flex">
+                                        <img src="images/star_on.png" height="15px" width="15px">
+                                        <img src="images/star_on.png" height="15px" width="15px">
+                                        <img src="images/star_on.png" height="15px" width="15px">
+                                        <img src="images/star_on.png" height="15px" width="15px">
+                                        <img src="images/star_off.png" height="15px" width="15px">
+                                        <h6 class="purple float-right mins">8min</h6>
+                                    </div>
+                                </div>
+                                <div class="col px-1">
+                                    <img src="images/thumbnail_2.jpg" width="255" height="154">
+                                    <h5 class="align-items-start font-weight-bolder pt-3 pl-6 pl-6-left">Happy Smile</h5>
+                                    <p class="text-gray align-self-start pt-1 pl-6 pl-6-left">Lorem ipsum dolor sit amet, consect<br>adipiscing elit, sed do eiusmod.</p>
+                                    <div class="align-self-start pt-1 pl-6 pl-6-left d-flex">
+                                        <img class="rounded-circle float-left" src="images/profile_1.jpg" width="30" height="30">
+                                        <p class="purple float-right pl-3 mb-0 mt-1 ">Phillip Massey</p>
+                                    </div>
+                                    <div class="align-self-start pt-3 pl-6 pl-6-left pr-0 d-flex">
+                                        <img src="images/star_on.png" height="15px" width="15px">
+                                        <img src="images/star_on.png" height="15px" width="15px">
+                                        <img src="images/star_on.png" height="15px" width="15px">
+                                        <img src="images/star_on.png" height="15px" width="15px">
+                                        <img src="images/star_off.png" height="15px" width="15px">
+                                        <h6 class="purple float-right mins">8min</h6>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
+                    <a class="carousel-control-prev videoLeft" href="#videoCarousel3" role="button" data-slide="next">
+                        <span class="icon leftArrowVideo mb-5 mb-sm-0" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next videoRight" href="#videoCarousel3" role="button" data-slide="next">
+                        <span class="icon rightArrowVideo mb-5 mb-sm-0" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
                 </div>
             </div>
         </section>
