--- a/4-homepage.html
+++ b/4-homepage.html
@@ -376,6 +376,40 @@
             </div>
         </section>
     </main>
+
+    <!-- FOOTER -->
+    <footer class="page-footer dark-bg pt-4">
+        <div class="container-lg">
+            <div class="d-flex flex-column flex-sm-row justify-content-between align-items-center my-5 px-sm-4">
+                <div class="pl-2 pl-sm-0">
+                    <img src="images/smile_off.png" height="30px" width="35px" alt="">
+                    <img class="mx-3" src="images/logo.png" alt="">
+                </div>
+                <div class="d-flex mt-4">
+                    <div class="row">
+                        <ul class="list-group list-group-horizontal list-unstyled">
+                            <li class="ml-3">
+                                <a class="text-decoration-none" href="https://www.facebook.com/HolbertonSchool/" aria-label="Facebook">
+                                    <span class="fb-icon display-4"></span>
+                                </a>
+                            </li>
+                            <li class="ml-3">
+                                <a class="text-decoration-none" href="https://twitter.com/holbertonschool" aria-label="Twitter">
+                                    <span class="twitter-icon display-4"></span>
+                                </a>
+                            </li>
+                            <li class="ml-3">
+                                <a class="text-decoration-none" href="https://www.instagram.com/holbertonschool/" aria-label="Instagram">
+                                    <span class="insta-icon display-4"></span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <p class="text-center text-muted small pb-5 mb-0">©smileschool 2020</p>
+    </footer>
 </body>
 
 </html>
