--- a/courses.html
+++ b/courses.html
@@ -32,7 +32,29 @@
                 <button class="navbar-toggler float-left position-absolute d-sm-none" type="button" data-toggle="collapse" data-target="#navbarLinks" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-icon"></span>
                 </button>
+
+                <!-- NAVLINKS -->
+                <div class="collapse navbar-collapse d-sm-flex col-sm-6" id="navbarLinks">
+                    <ul class="navbar-nav text-uppercase ml-auto flex-sm-row align-items-center font-weight-bold">
+                        <li class="navbar-item">
+                            <a class="nav-link text-white mx-5 mx-lg-3 mx-sm-0 pr-sm-3 pr-md-0" href="courses.html">Courses</a>
+                        </li>
+                        <li class="navbar-item">
+                            <a class="nav-link text-white mx-5 mx-lg-4 mx-sm-4" href="pricing.html">Pricing</a>
+                        </li>
+                        <li class="navbar-item">
+                            <a class="nav-link text-white mx-5 mx-lg-4 mx-sm-4" href="homepage.html">Login</a>
+                        </li>
+                    </ul>
+                </div>
             </nav>
+
+            <!-- BANNER -->
+            <div class="position-relative pt-4 pb-sm-5">
+                <h1 class="text-center font-weight-bold d-none d-sm-block coiny">« Don’t cry because it’s over.
+                    <br><span class="purple">Smile</span> because it happened. »
+                </h1>
+            </div>
         </div>
     </header>
 </body>
