--- a/homepage.html
+++ b/homepage.html
@@ -42,7 +42,7 @@
                             <a class="nav-link text-white mx-5 mx-lg-3 mx-sm-0" href="courses.html">Courses</a>
                         </li>
                         <li class="navbar-item">
-                            <a class="nav-link text-white mx-5 mx-lg-4 mx-sm-4" href="pricing.html">Pircing</a>
+                            <a class="nav-link text-white mx-5 mx-lg-4 mx-sm-4" href="pricing.html">Pricing</a>
                         </li>
                         <li class="navbar-item">
                             <a class="nav-link text-white mx-5 mx-lg-4 mx-sm-4" href="#">Login</a>
@@ -165,6 +165,7 @@
                             <div class="row">
                                 <div class="col px-1">
                                     <img src="images/thumbnail_4.jpg" width="255" height="154">
+                                    <img class="card-img-overlay play mx-auto mt-5 p-0" src="images/play.png">
                                     <h5 class="align-self-start font-weight-bolder pt-3 pl-6 pl-6-left">Diagonal Smile
                                     </h5>
                                     <p class="text-gray align-self-start pt-1 pl-6 pl-6-left">Lorem ipsum dolor sit amet, consect<br>adipiscing elit, sed do eiusmod.</p>
@@ -183,6 +184,7 @@
                                 </div>
                                 <div class="col px-1">
                                     <img src="images/thumbnail_3.jpg" width="255" height="154">
+                                    <img class="card-img-overlay play mx-auto mt-5 p-0" src="images/play.png">
                                     <h5 class="align-self-start font-weight-bolder pt-3 pl-6">Sad Smile
                                     </h5>
                                     <p class="text-gray align-self-start pt-1 pl-6">Lorem ipsum dolor sit amet, consect<br>adipiscing elit, sed do eiusmod.</p>
@@ -201,6 +203,7 @@
                                 </div>
                                 <div class="col px-1">
                                     <img src="images/thumbnail_1.jpg" width="255" height="154">
+                                    <img class="card-img-overlay play mx-auto mt-5 p-0" src="images/play.png">
                                     <h5 class="align-self-start font-weight-bolder pt-3 pl-6">Neutral Smile
                                     </h5>
                                     <p class="text-gray align-self-start pt-1 pl-6">Lorem ipsum dolor sit amet, consect<br>adipiscing elit, sed do eiusmod.</p>
@@ -219,6 +222,7 @@
                                 </div>
                                 <div class="col px-1">
                                     <img src="images/thumbnail_2.jpg" width="255" height="154">
+                                    <img class="card-img-overlay play mx-auto mt-5 p-0" src="images/play.png">
                                     <h5 class="align-self-start font-weight-bolder pt-3 pl-6">Happy Smile
                                     </h5>
                                     <p class="text-gray align-self-start pt-1 pl-6">Lorem ipsum dolor sit amet, consect<br>adipiscing elit, sed do eiusmod.</p>
@@ -296,6 +300,7 @@
                             <div class="row">
                                 <div class="col px-1">
                                     <img src="images/Inverted.png" width="255" height="154">
+                                    <img class="card-img-overlay play mx-auto mt-5 p-0" src="images/play.png">
                                     <h5 class="align-items-start font-weight-bolder pt-3 pl-6 pl-6-left">Inverted Smile</h5>
                                     <p class="text-gray align-self-start pt-1 pl-6 pl-6-left">Lorem ipsum dolor sit amet, consect<br>adipiscing elit, sed do eiusmod.</p>
                                     <div class="align-self-start pt-1 pl-6 pl-6-left d-flex">
@@ -313,6 +318,7 @@
                                 </div>
                                 <div class="col px-1">
                                     <img src="images/thumbnail_3.jpg" width="255" height="154">
+                                    <img class="card-img-overlay play mx-auto mt-5 p-0" src="images/play.png">
                                     <h5 class="align-items-start font-weight-bolder pt-3 pl-6 pl-6-left">Sad Smile</h5>
                                     <p class="text-gray align-self-start pt-1 pl-6 pl-6-left">Lorem ipsum dolor sit amet, consect<br>adipiscing elit, sed do eiusmod.</p>
                                     <div class="align-self-start pt-1 pl-6 pl-6-left d-flex">
@@ -330,6 +336,7 @@
                                 </div>
                                 <div class="col px-1">
                                     <img src="images/thumbnail_1.jpg" width="255" height="154">
+                                    <img class="card-img-overlay play mx-auto mt-5 p-0" src="images/play.png">
                                     <h5 class="align-items-start font-weight-bolder pt-3 pl-6 pl-6-left">Natural Smile</h5>
                                     <p class="text-gray align-self-start pt-1 pl-6 pl-6-left">Lorem ipsum dolor sit amet, consect<br>adipiscing elit, sed do eiusmod.</p>
                                     <div class="align-self-start pt-1 pl-6 pl-6-left d-flex">
@@ -347,6 +354,7 @@
                                 </div>
                                 <div class="col px-1">
                                     <img src="images/thumbnail_2.jpg" width="255" height="154">
+                                    <img class="card-img-overlay play mx-auto mt-5 p-0" src="images/play.png">
                                     <h5 class="align-items-start font-weight-bolder pt-3 pl-6 pl-6-left">Happy Smile</h5>
                                     <p class="text-gray align-self-start pt-1 pl-6 pl-6-left">Lorem ipsum dolor sit amet, consect<br>adipiscing elit, sed do eiusmod.</p>
                                     <div class="align-self-start pt-1 pl-6 pl-6-left d-flex">
