--- a/pricing.html
+++ b/pricing.html
@@ -171,14 +171,14 @@
     </header>
     <main id="a11y-main-content" tabindex="-1">
 
-        <!-- CAROUSEL -->
+        <!-- TESTIMONIAL -->
         <section class="container-fluid purple-bg py-5">
             <div class="container-lg quotes">
                 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <div class="d-flex flex-column align-items-center flex-sm-row col-sm-10 carousel-helper">
-                                <img class="rounded-circle carousel-avatar" src="images/profile_5.jpg" width="175" />
+                                <img class="rounded-circle carousel-avatar" src="images/profile_5.jpg" width="210" />
                                 <div class="px-sm-5">
                                     <p class="px-2 mt-4 mt-md-0">« Those tutorials are concise and go straight to the point. I can't think of a better place to learn something. And it's so fun!
                                     </p>
@@ -189,7 +189,7 @@
                         </div>
                         <div class="carousel-item">
                             <div class="d-flex flex-column align-items-center flex-sm-row col-sm-10 carousel-helper">
-                                <img class="rounded-circle carousel-avatar" src="images/profile_5.jpg" width="175" />
+                                <img class="rounded-circle carousel-avatar" src="images/profile_5.jpg" width="210" />
                                 <div class="px-sm-5">
                                     <p class="px-2 mt-4 mt-md-0">« Those tutorials are concise and go straight to the point. I can't think of a better place to learn something. And it's so fun!
                                     </p>
@@ -200,7 +200,7 @@
                         </div>
                         <div class="carousel-item">
                             <div class="d-flex flex-column align-items-center flex-sm-row col-sm-10 carousel-helper">
-                                <img class="rounded-circle carousel-avatar" src="images/profile_5.jpg" width="175" />
+                                <img class="rounded-circle carousel-avatar" src="images/profile_5.jpg" width="210" />
                                 <div class="px-sm-5">
                                     <p class="px-2 mt-4 mt-md-0">« Those tutorials are concise and go straight to the point. I can't think of a better place to learn something. And it's so fun!
                                     </p>
@@ -210,12 +210,12 @@
                             </div>
                         </div>
                     </div>
-                    <a class="carousel-control-prev mb-5 mb-sm-0 pb-sm-0" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                        <span class="icon leftArrowVideo mb-5 mb-sm-0" aria-hidden="true"></span>
+                    <a class="carousel-control-prev mb-5 mb-sm-0" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon mb-5 mb-sm-0" aria-hidden="true"></span>
                         <span class="sr-only">Previous</span>
                     </a>
-                    <a class="carousel-control-next mb-5  mb-sm-0 pb-sm-0" href="#carouselExampleIndicators" role="button" data-slide="next">
-                        <span class="icon rightArrowVideo mb-5 mb-sm-0" aria-hidden="true"></span>
+                    <a class="carousel-control-next mb-5 mb-sm-0" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon mb-5 mb-sm-0" aria-hidden="true"></span>
                         <span class="sr-only">Next</span>
                     </a>
                 </div>
