--- a/courses.html
+++ b/courses.html
@@ -20,7 +20,7 @@
         <div class="container-lg">
 
             <!-- NAVBAR-->
-            <nav class="d-flex flex-column flex-sm-row pt-4" id="a11y-primary-nav" tabindex="-1">
+            <nav class="navbar navbar-expand-md navbar-dark text-center" id="a11y-primary-nav" tabindex="-1">
 
                 <!-- LOGO -->
                 <div class="d-flex flex-column flex-sm-row col-sm-6 align-items-center">
@@ -30,7 +30,7 @@
 
                 <!-- HAMBURGER -->
                 <button class="navbar-toggler float-left position-absolute d-sm-none" type="button" data-toggle="collapse" data-target="#navbarLinks" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-icon"></span>
+                    <span class="navbar-toggler-icon"></span>
                 </button>
 
                 <!-- NAVLINKS -->
