--- a/homepage.html
+++ b/homepage.html
@@ -22,7 +22,7 @@
         <div class="container-lg">
 
             <!-- NAVBAR -->
-            <nav class="d-flex flex-column flex-sm-row pt-4 " id="a11y-primary-nav" tabindex="-1">
+            <nav class="navbar navbar-expand-md navbar-dark text-center" id="a11y-primary-nav" tabindex="-1">
 
                 <!-- LOGO -->
                 <div class="d-flex flex-column flex-sm-row col-sm-6 align-items-center">
@@ -32,7 +32,7 @@
 
                 <!-- HAMBURGER -->
                 <button class="navbar-toggler float-left position-absolute d-sm-none" type="button" data-toggle="collapse" data-target="#navbarLinks" aria-expanded="false" aria-label="Toggle navigation menu">
-					<span class="navbar-icon"></span>
+					<span class="navbar-toggler-icon"></span>
 				</button>
 
                 <!-- NAVLINKS -->
@@ -373,12 +373,12 @@
                             </div>
                         </div>
                     </div>
-                    <a class="carousel-control-prev videoLeft" href="#videoCarousel3" role="button" data-slide="next">
-                        <span class="icon leftArrowVideo mb-5 mb-sm-0" aria-hidden="true"></span>
+                    <a class="carousel-control-prev mb-5 mb-sm-0" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon mb-5 mb-sm-0" aria-hidden="true"></span>
                         <span class="sr-only">Previous</span>
                     </a>
-                    <a class="carousel-control-next videoRight" href="#videoCarousel3" role="button" data-slide="next">
-                        <span class="icon rightArrowVideo mb-5 mb-sm-0" aria-hidden="true"></span>
+                    <a class="carousel-control-next mb-5 mb-sm-0" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon mb-5 mb-sm-0" aria-hidden="true"></span>
                         <span class="sr-only">Next</span>
                     </a>
                 </div>
