--- a/pricing.html
+++ b/pricing.html
@@ -32,7 +32,7 @@
     <!-- HEADER & NAVBAR -->
     <header class="pricing container-fluid">
         <div class="container-lg">
-            <nav class="d-flex flex-column flex-sm-row pt-4 " id="a11y-primary-nav" tabindex="-1">
+            <nav class="navbar navbar-expand-md navbar-dark text-center" id="a11y-primary-nav" tabindex="-1">
                 <div class="d-flex flex-column flex-sm-row col-sm-6 align-items-center">
                     <img class="m-2" src="images/smile_off.png" height="30px" width="40px" alt="smilefaceoff">
                     <img class="m-2" src="images/logo.png" height="30px" width="115px" alt="logo">
@@ -40,7 +40,7 @@
 
                 <!-- HAMBURGER -->
                 <button class="navbar-toggler float-left position-absolute d-sm-none" type="button" data-toggle="collapse" data-target="#navbarLinks" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-icon"></span>
+					<span class="navbar-toggler-icon"></span>
 				</button>
 
                 <!-- NAVLINKS -->
